--- a/Rebalance mod/config.json
+++ b/Rebalance mod/config.json
@@ -34,6 +34,13 @@
             "health": "125"
         },
         "Iron mine": {
+            "cost": [
+                "30",
+                "0",
+                "0",
+                "0",
+                "0"
+            ],
             "health": "500"
         },
         "Pitch rig": {
@@ -73,10 +80,10 @@
         "Fletcher": {
             "cost": [
                 "10",
-                "10",
                 "0",
                 "0",
-                "0"
+                "0",
+                "100"
             ],
             "health": "500"
         },
@@ -93,10 +100,10 @@
         "Poleturner": {
             "cost": [
                 "10",
-                "5",
                 "0",
                 "0",
-                "0"
+                "0",
+                "50"
             ],
             "health": "500"
         },
@@ -113,12 +120,12 @@
         "Tanner": {
             "cost": [
                 "10",
-                "0",
+                "10",
                 "0",
                 "0",
                 "0"
             ],
-            "health": "250"
+            "health": "500"
         },
         "Bakery": {
             "health": "250"
@@ -2973,6 +2980,10 @@
     {"description":"Wheat base delivery amount.","address":"0x152F6E","size":1,"value":1},
     {"description":"Hops base delivery amount.","address":"0x153AE6","size":1,"value":1},
     {"description":"Iron base delivery amount.","address":"0x16672E","size":1,"value":2},
+    {"description":"Leather armor base delivery amount.","address":"0x5076","size":1,"value":3},
+    {"description":"Leather armor base delivery amount, code adjustment 1.","address":"0x15A52F","size":9,"value":2666748131981111542249},
+    {"description":"Leather armor base delivery amount, code adjustment 2.","address":"0x5075","size":1,"value":106},
+    {"description":"Leather armor base delivery amount, code adjustment 3.","address":"0x5077","size":14,"value":1690005651681123716917000310864},
 
     {"description":"No food popularity modifier.","address":"0x5BB66","size":4,"value":-250},
     {"description":"No rations popularity modifier.","address":"0x5BB78","size":4,"value":-250},
@@ -3038,16 +3049,16 @@
     {"description":"SHC-PGR-35.","address":"0x6B9074","size":4,"value":-3},
     {"description":"SHC-PGR-40.","address":"0x6B9078","size":4,"value":-2},
     {"description":"SHC-PGR-45.","address":"0x6B907C","size":4,"value":-1},
-    {"description":"SHC-PGR-50.","address":"0x6B9080","size":4,"value":2},
-    {"description":"SHC-PGR-55.","address":"0x6B9084","size":4,"value":4},
-    {"description":"SHC-PGR-60.","address":"0x6B9088","size":4,"value":6},
-    {"description":"SHC-PGR-65.","address":"0x6B908C","size":4,"value":8},
-    {"description":"SHC-PGR-70.","address":"0x6B9090","size":4,"value":10},
-    {"description":"SHC-PGR-75.","address":"0x6B9094","size":4,"value":12},
-    {"description":"SHC-PGR-80.","address":"0x6B9098","size":4,"value":14},
-    {"description":"SHC-PGR-85.","address":"0x6B909C","size":4,"value":16},
+    {"description":"SHC-PGR-50.","address":"0x6B9080","size":4,"value":10},
+    {"description":"SHC-PGR-55.","address":"0x6B9084","size":4,"value":11},
+    {"description":"SHC-PGR-60.","address":"0x6B9088","size":4,"value":12},
+    {"description":"SHC-PGR-65.","address":"0x6B908C","size":4,"value":13},
+    {"description":"SHC-PGR-70.","address":"0x6B9090","size":4,"value":14},
+    {"description":"SHC-PGR-75.","address":"0x6B9094","size":4,"value":15},
+    {"description":"SHC-PGR-80.","address":"0x6B9098","size":4,"value":16},
+    {"description":"SHC-PGR-85.","address":"0x6B909C","size":4,"value":17},
     {"description":"SHC-PGR-90.","address":"0x6B90A0","size":4,"value":18},
-    {"description":"SHC-PGR-95.","address":"0x6B90A4","size":4,"value":20},
+    {"description":"SHC-PGR-95.","address":"0x6B90A4","size":4,"value":19},
     {"description":"SHC-PGR-100.","address":"0x6B90A8","size":4,"value":20},
 
     {"description":"Tax popularity modifier, level 0.","address":"0x5BC73","size":4,"value":250},
